# gr-ofdm

./: CMakeLists.txt  auto_generate_grc.py  remove_pybak_files.py  translate_2_to_3.py  valid_modules.txt
TODO/: todos
apps/: test_qt_imports.py
apps/benchmarking/: plot_results_two_machines.py
apps/benchmarking/bm_scripts/: bm_coding.py  bm_modulator.py
apps/grc/: paper_tigr_fbmc_inner_receiver.grc  top_block.py  transmit_control.grc
apps/gui/: ofdm_mimo_rx_gui.py  ofdm_mimo_rx_gui.py.bak  ofdm_mrrc_rx_gui.py  ofdm_mrrc_rx_gui.py.bak  ofdm_rx_gui.py  ofdm_rx_gui.py.bak  ofdm_rx_gui_window.ui  ofdm_tx_gui.py  ofdm_tx_gui_window.ui
cmake/Modules/: FindITPP.cmake
grc/: CMakeLists.txt  ofdm_CTF_MSE_enhancer.block.yml  ofdm_accumulator_cc.block.yml  ofdm_accumulator_ff.block.yml  ofdm_add_vcc.block.yml  ofdm_allocation_buffer.block.yml  ofdm_allocation_src.block.yml  ofdm_autocorrelator.block.yml  ofdm_autocorrelator0.block.yml  ofdm_autocorrelator_stage1.block.yml  ofdm_autocorrelator_stage2.block.yml  ofdm_ber_measurement.block.yml  ofdm_ber_reference_source.block.yml  ofdm_bernoulli_bit_src.block.yml  ofdm_bit_position_dependent_ber.block.yml  ofdm_calc_metric.block.yml  ofdm_channel_equalizer.block.yml  ofdm_channel_equalizer_mimo.block.yml  ofdm_channel_equalizer_mimo_2.block.yml  ofdm_channel_equalizer_mimo_3.block.yml  ofdm_channel_estimator_01.block.yml  ofdm_channel_estimator_02.block.yml  ofdm_coded_bpsk_soft_decoder.block.yml  ofdm_compat_read_ber_from_imgxfer.block.yml  ofdm_complex_to_arg.block.yml  ofdm_complex_white_noise.block.yml  ofdm_constellation_sample_filter.block.yml  ofdm_cyclic_prefixer.block.yml  ofdm_depuncture_bb.block.yml  ofdm_depuncture_ff.block.yml  ofdm_divide_frame_fc.block.yml  ofdm_dummy_ff.block.yml  ofdm_dynamic_trigger_ib.block.yml  ofdm_encoder_bb.block.yml  ofdm_extract_block_from_frame.block.yml  ofdm_fbmc_asymmetrical_vector_mask_vcvc.block.yml  ofdm_fbmc_asymmetrical_vector_padding_vcvc.block.yml  ofdm_fbmc_beta_multiplier_vcvc.block.yml  ofdm_fbmc_channel_hier_cc.block.yml  ofdm_fbmc_frame_sampler.block.yml  (+128 more)
lib/: CMakeLists.txt  allocation_buffer_impl.cc
python/ofdm/: CMakeLists.txt  __init__.py  autocorrelator.py  benchmark_fbmc.py  benchmark_mimo.py  benchmark_mimo21.py  benchmark_mrrc.py  benchmark_ofdm.py  ber_reference_source_grc.py  channel.py  common_options.py  configparse.py  delaylines.py  fbmc_channel_hier_cc.py  fbmc_frame_sampler_grc.py  fbmc_insert_preamble_mu_vcvc.py  fbmc_insert_preamble_vcvc.py  fbmc_overlapping_parallel_to_serial_vcc.py  fbmc_overlapping_serial_to_parallel_cvc.py  fbmc_receive_path.py  fbmc_receiver.py  fbmc_receiver_demo.py  fbmc_receiver_hier_cb.py  fbmc_receiver_multiuser_cb.py  fbmc_rms_amplifier_grc.py  fbmc_symbol_estimation_vcb.py  fbmc_transmit_path.py  fbmc_transmitter_demo.py  fbmc_transmitter_hier_bc.py  fbmc_transmitter_multiuser_bc.py  fbmc_vector_reshape_vcvc.py  file_psd.py  gr_tools.py  moms.py  moms_general.py  morelli.py  ofdm_frame_sampler_grc.py  ofdm_receiver.py  ofdm_receiver2.py  ofdm_receiver21.py  (+109 more)
requirements_helpers/: how_to.md
