# Copyright 2011 Free Software Foundation, Inc.
#
# This file is part of GNU Radio
#
# GNU Radio is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# GNU Radio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Radio; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.
install(FILES
    ofdm_uhd_transmitter.block.yml
    ofdm_ofdm_pilot_block_inserter.block.yml
    ofdm_fbmc_snr_filter.block.yml
    ofdm_snr_filter.block.yml
    ofdm_scatterplot_subcarrier_filter.block.yml
    ofdm_fbmc_rms_amplifier.block.yml
    ofdm_fbmc_snr_estimator.block.yml
    ofdm_fbmc_postprocess_CTF_estimate.block.yml
    ofdm_pilot_block_filter.block.yml
    ofdm_frame_sampler.block.yml
    ofdm_fbmc_frame_sampler.block.yml
    ofdm_fbmc_pilot_block_filter.block.yml
    ofdm_pilot_subcarrier_filter.block.yml
    ofdm_ber_reference_source.block.yml
    ofdm_recursive_timing_metric.block.yml
    ofdm_accumulator_cc.block.yml
    ofdm_autocorrelator_stage1.block.yml
    ofdm_autocorrelator_stage2.block.yml
    ofdm_accumulator_ff.block.yml
    ofdm_autocorrelator0.block.yml
    ofdm_autocorrelator.block.yml
    ofdm_ber_measurement.block.yml
    ofdm_bernoulli_bit_src.block.yml
    ofdm_bit_position_dependent_ber.block.yml
    ofdm_calc_metric.block.yml
    ofdm_channel_equalizer_mimo_2.block.yml
    ofdm_channel_equalizer_mimo_3.block.yml
    ofdm_channel_equalizer_mimo.block.yml
    ofdm_channel_equalizer.block.yml
    ofdm_channel_estimator_01.block.yml
    ofdm_channel_estimator_02.block.yml
    ofdm_coded_bpsk_soft_decoder.block.yml
    ofdm_compat_read_ber_from_imgxfer.block.yml
    ofdm_divide_frame_fc.block.yml
    ofdm_imgtransfer_sink.block.yml
    ofdm_imgtransfer_src.block.yml
    ofdm_imgtransfer_testkanal.block.yml
    ofdm_complex_to_arg.block.yml
    ofdm_complex_white_noise.block.yml
    ofdm_constellation_sample_filter.block.yml
    ofdm_CTF_MSE_enhancer.block.yml
    ofdm_cyclic_prefixer.block.yml
    ofdm_depuncture_bb.block.yml
    ofdm_depuncture_ff.block.yml
    ofdm_time_sync.block.yml
    ofdm_dynamic_trigger_ib.block.yml
    ofdm_extract_block_from_frame.block.yml
    ofdm_find_cir_shift.block.yml
    ofdm_frame_mux.block.yml
    ofdm_frequency_shift_vcc.block.yml
    ofdm_gate_ff.block.yml
    ofdm_generic_mapper_bcv.block.yml
    ofdm_generic_demapper_vcb.block.yml
    ofdm_generic_mapper_mimo_bcv.block.yml
    ofdm_generic_softdemapper_vcf.block.yml
    ofdm_int_skip.block.yml
    ofdm_interp_cir_set_noncir_to_zero.block.yml
    ofdm_limit_vff.block.yml
    ofdm_lms_fir_ff.block.yml
    ofdm_lms_phase_tracking.block.yml
    ofdm_lms_phase_tracking_02.block.yml
    ofdm_lms_phase_tracking_03.block.yml
    ofdm_ls_estimator_straight_slope.block.yml
    ofdm_mean_squared_error.block.yml
    ofdm_mm_frequency_estimator.block.yml
    ofdm_moms_cc.block.yml
    ofdm_moms_ff.block.yml
    ofdm_multiply_const_ccf.block.yml
    ofdm_multiply_const_ccf.block.yml
    ofdm_multiply_const_ii.block.yml
    ofdm_multiply_const_vcc.block.yml
    ofdm_multiply_frame_fc.block.yml
    ofdm_noise_nulling.block.yml
    ofdm_normalize_vcc.block.yml
    ofdm_peak_detector_02_fb.block.yml
    ofdm_peak_resync_bb.block.yml
    ofdm_pilot_subcarrier_inserter.block.yml
    ofdm_postprocess_CTF_estimate.block.yml
    ofdm_puncture_bb.block.yml
    ofdm_reassemble_ofdm_frame.block.yml
    ofdm_reference_data_source_ib.block.yml
    ofdm_reference_data_source_mimo_ib.block.yml
    ofdm_repetition_decoder_bs.block.yml
    ofdm_repetition_encoder_sb.block.yml
    ofdm_subc_snr_estimator.block.yml
    ofdm_scatterplot_sink.block.yml
    ofdm_schmidl_cfo_estimator.block.yml
    ofdm_schmidl_tm_rec_stage1.block.yml
    ofdm_schmidl_tm_rec_stage2.block.yml
    ofdm_sinr_estimator.block.yml
    ofdm_sinr_estimator_02.block.yml
    ofdm_sinr_interpolator.block.yml
    ofdm_skip.block.yml
    ofdm_snr_estimator.block.yml
    ofdm_sqrt_vff.block.yml
    ofdm_static_mux_c.block.yml
    ofdm_static_mux_v.block.yml
    ofdm_stc_decoder_rx0.block.yml
    ofdm_stc_decoder_rx1.block.yml
    ofdm_stc_encoder.block.yml
    ofdm_stream_controlled_mux_b.block.yml
    ofdm_stream_controlled_mux.block.yml
    ofdm_suppress_erasure_decision.block.yml
    ofdm_symbol_random_src.block.yml
    ofdm_throughput_measure.block.yml
    ofdm_trigger_surveillance.block.yml
    ofdm_vector_padding.block.yml
    ofdm_vector_mask.block.yml
    ofdm_vector_element.block.yml
    ofdm_vector_sampler.block.yml
    ofdm_vector_sum_vcc.block.yml
    ofdm_vector_sum_vff.block.yml
    ofdm_viterbi_combined_fb.block.yml
    ofdm_fsm.block.yml
    ofdm_itpp_tdl_channel.block.yml
    ofdm_encoder_bb.block.yml
    ofdm_reference_data_source_02_ib.block.yml
    ofdm_allocation_src.block.yml
    ofdm_allocation_buffer.block.yml
    ofdm_tx_mux_ctrl.block.yml
    ofdm_vector_padding_dc_null.block.yml
    ofdm_snr_estimator_dc_null.block.yml
    ofdm_vector_mask_dc_null.block.yml
    ofdm_lms_phase_tracking_dc_null.block.yml
    ofdm_midamble_insert.block.yml 
    ofdm_fbmc_oqam_preprocessing_vcvc.block.yml
    ofdm_fbmc_oqam_postprocessing_vcvc.block.yml
    ofdm_fbmc_insert_preamble_vcvc.block.yml
    ofdm_fbmc_beta_multiplier_vcvc.block.yml
    ofdm_fbmc_separate_vcvc.block.yml
    ofdm_fbmc_polyphase_network_vcvc.block.yml
    ofdm_fbmc_overlapping_parallel_to_serial_vcc.block.yml
    ofdm_fbmc_overlapping_serial_to_parallel_cvc.block.yml
    ofdm_fbmc_pilot_block_inserter.block.yml
    ofdm_fbmc_vector_reshape_vcvc.block.yml
    ofdm_fbmc_vector_copy_vcvc.block.yml
    ofdm_fbmc_junction_vcvc.block.yml
    ofdm_fbmc_remove_preamble_vcvc.block.yml
    ofdm_fbmc_subchannel_processing_vcvc.block.yml
    ofdm_fbmc_weighted_spreading_vcvc.block.yml
    ofdm_fbmc_weighted_despreading_vcvc.block.yml
    ofdm_fbmc_channel_hier_cc.block.yml
    ofdm_fbmc_receiver_hier_cb.block.yml
    ofdm_fbmc_transmitter_hier_bc.block.yml
    ofdm_fbmc_symbol_estimation_vcb.block.yml
    ofdm_fbmc_symbol_creation_bvc.block.yml
    ofdm_fbmc_transmitter_demo.block.yml
    ofdm_fbmc_receiver_demo.block.yml
    ofdm_fbmc_asymmetrical_vector_padding_vcvc.block.yml
    ofdm_fbmc_transmitter_multiuser_bc.block.yml
    ofdm_fbmc_asymmetrical_vector_mask_vcvc.block.yml
    ofdm_fbmc_receiver_multiuser_cb.block.yml
    ofdm_scfdma_subcarrier_mapper_vcvc.block.yml
    ofdm_scfdma_transmitter_bc.block.yml
    ofdm_scfdma_subcarrier_demapper_vcvc.block.yml
    ofdm_scfdma_receiver_cb.block.yml
    ofdm_add_vcc.block.yml
    ofdm_fbmc_insert_preamble_mu_vcvc.block.yml
    ofdm_fbmc_subchannel_processing_mu_vcvc.block.yml
    ofdm_feedback_sink_vf.block.yml
    ofdm_vector_element_vff.block.yml 
    DESTINATION share/gnuradio/grc/blocks
)
